index.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  font-size: 10px;
  margin: 0;
  padding: 0;
}

body {
  background-image: url('background.jpeg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  max-width: 100vw;
  font-family: 'Open Sans', sans-serif;
  color: #eee;
  font-size: 2rem;
  overflow-y: scroll;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Fraunces, serif;
}

main {
  width: 100%;
  min-height: 100%;
  background-color: rgba(51, 10, 0, 0.7);
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-evenly;
}

h1 {
  font-size: 6rem;
}

#library {
  width: 100%;
  min-height: 100%;
  background-color: rgba(51, 10, 0, 0.7);
}

.book {
  max-width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 1rem 0;
  padding: 2rem;
}

.book-cover {
  width: 75%;
  height: auto;
}

.book-author {
  font-weight: bold;
  font-size: 2.25rem;
  letter-spacing: 0.15rem;
  margin: 1rem;
}

.book-info {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.book-pages,
.book-read {
  margin: 1rem;
}

form {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: fixed;
  top: 50%;
  left: 50%;
  width: 90%;
  height: 60%;
  margin-top: -60%;
  margin-left: -45%;
  background-color: #eee;
  color: rgb(51, 10, 0);
  padding: 2rem;
  box-shadow: 2.5px 5px rgba(51, 10, 0, 0.5);
  transition: 750ms;
}

form .add-book-title {
  text-align: center;
}

form input {
  font-family: inherit;
  padding: 0.5rem;
  font-size: 1.4rem;
}

.checkbox {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  margin: 0.75rem 0;
}

.checkbox input {
  margin-right: 2rem;
  transform: scale(2);
}

#submit {
  padding: 1rem 2rem;
  background-color: rgb(51, 10, 0);
  color: #eee;
  font-size: 1.8rem;
  font-weight: bold;
}

#addBook {
  cursor: pointer;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  font-size: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background: #eee;
  color: rgb(51, 10, 0);
  outline: none;
  border: none;
  position: fixed;
  bottom: 15px;
  right: 15px;
  box-shadow: 2.5px 5px 5px rgba(51, 10, 0, 0.5);
  z-index: 10;
  transition: 1s;
}

.rotate {
  transform: rotate(45deg);
}

.hidden {
  opacity: 0;
  transform: translateY(20px);
}

.showing {
  opacity: 1;
}

